Add cuadrado and media tag
